# AQSparseBench

./: .gitignore  pyproject.toml
aqsparsebench/: __init__.py  config.py  regions.py  types.py
aqsparsebench/benchmark/: __init__.py  cluster.py  generate.py  manifests.py  represent.py  retention.py  select.py
aqsparsebench/benchmark/strategies/: __init__.py  base.py  registry.py  weighted_sampling.py
aqsparsebench/export/: __init__.py  metadata_export.py  parquet_export.py  split_export.py
aqsparsebench/features/: __init__.py  _common.py  background.py  concentration.py  population.py  utility.py  variability.py  wind.py
aqsparsebench/io/: __init__.py  aqs_api.py  cache.py  census_population.py  memory_sources.py  protocols.py  sources.py  weather_api.py
aqsparsebench/preprocess/: __init__.py  align.py  canonical.py  epa_normalize.py  from_sources.py  geo.py  impute.py  monitor_select.py  qc.py  scaling.py
aqsparsebench/utils/: __init__.py
docs/: api.rst  colab.md  conf.py  index.rst  installation.md  overview.md
scripts/: build_docs.py
tests/: test_aqs_api.py  test_census_population.py  test_cluster_and_export.py  test_cluster_fallback.py  test_config.py  test_generation.py  test_monitor_select.py  test_preprocess.py  test_protocols_and_sources.py  test_scoring.py  test_target_selection.py  test_weather_api.py  test_weather_window.py
