[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aqsparsebench"
version = "0.1.0"
description = "Sparse air-quality monitoring network benchmarks from AQS and related data"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AQSparseBench contributors" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "requests>=2.31",
    "pyarrow>=14.0",
    "scikit-learn>=1.3",
    "scikit-learn-extra>=0.3.0",
    "pydantic>=2.5",
    "joblib>=1.3",
]

[project.urls]
Homepage = "https://github.com/jmglitxh27/AQSparseBench"
Repository = "https://github.com/jmglitxh27/AQSparseBench"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1.9",
]
docs = [
    "sphinx>=7",
    "furo>=2024.8.6",
    "myst-parser>=3",
    "sphinx-autodoc-typehints>=2.3",
    "rinohtype>=0.5.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["aqsparsebench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
